--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "rm -rf ./dist/ && node tools/copy && node tools/clear && parcel ./src/index.html -p 32555 --https",
-    "build": "rm -rf ./dist/ && node tools/copy && parcel build ./src/index.html --public-url /ai-demos/dist/",
-    "build2": "rm -rf ./dist/ && node tools/copy && parcel build ./src/index.html"
+    "serve": "rm -rf ./dist/ && node tools/clear && parcel ./src/index.html -p 32555 --https",
+    "build": "rm -rf ./dist/ && parcel build ./src/index.html --public-url /ai-demos/dist/",
+    "build2": "rm -rf ./dist/ && parcel build ./src/index.html"
   },
   "repository": {
     "type": "git",
